# sampling_based_control

./: .clang-format  .gitignore  .gitmodules  .linterconfig.yaml  CMakeLists.txt  LICENSE  README.md  imgui.ini  install_dependencies.sh  requirements.txt  studigem  studigem.pub  test.urdf
mppi/: CMakeLists.txt  README.md  package.xml
mppi/config/: config.rviz
mppi/include/mppi/: exceptions.h  solver_config.h  typedefs.h
mppi/python/: python.cpp
mppi/python/notebooks/: gaussian_policy.ipynb  receding_horizon_spline.ipynb  spline_policy.ipynb
mppi/scripts/: desirability_functions_comparison.py  filtering.py
mppi/src/: solver_config.cpp
mppi/src/controller/: mppi.cpp  rollout.cpp
mppi/src/core/: config.cpp  cost.cpp  dynamics.cpp  rollout.cpp  solver.cpp
mppi/src/cost/: cost_base.cpp
mppi/src/dynamics/: dynamics_base.cpp
mppi/src/experts/: expert.cpp
mppi/src/filters/: gram_savitzky_golay.cpp  savgol_filter.cpp
mppi/src/gui/: gui.cpp
mppi/src/learned_expert/: learned_expert.cpp
mppi/src/learned_sampler/: learned_sampler.cpp
mppi/src/policies/: gaussian_policy.cpp  receding_horizon_spline.cpp  spline_policy.cpp
mppi/src/threading/: Rate.cpp  Worker.cpp  WorkerManager.cpp
mppi/src/tree/: node.cpp  tree_manager.cpp
mppi/src/utils/: gram_savitzky_golay.cpp  savgol_filter.cpp  timer.cpp
mppi/src/visualization/: path_integral_visualizer.cpp
mppi/unittest/: data_logging.cpp  double_integrator.cpp  filter_test.cpp  load_csv.py  logging.cpp  mppi_methods.cpp  mppi_visualizer.cpp  multivariate_normal_eigen_test.cpp  savgol_filter.cpp  solver_config.cpp  spline.cpp  thread_pool.cpp
mppi/unittest/resources/: config.yaml
mppi_control/: CMakeLists.txt  package.xml
mppi_est/: CMakeLists.txt  package.xml
mppi_est/include/mppi_est/: model.hpp  model_particle_filter.hpp  typedefs.hpp
mppi_est/src/: model.cpp  model_particle_filter.cpp
mppi_est/unittest/: point_mass.cpp  point_mass.h  point_mass_test.cpp  pole_cart.cpp  pole_cart.h  pole_cart_test.cpp
mppi_est/unittest/notebooks/: point_mass.ipynb  pole_cart.ipynb
mppi_examples/manipulation_msgs/: CMakeLists.txt  package.xml
mppi_examples/manipulation_msgs/msg/: Input.msg  InputState.msg  MugPrimitive.msg  State.msg
mppi_examples/manipulation_msgs/src/: conversions.cpp
mppi_examples/manipulation_msgs/srv/: CylinderFit.srv  StateRequest.srv
mppi_examples/manipulation_msgs/unittest/: conversions_test.cpp
mppi_examples/mppi_first_order_mass/: CMakeLists.txt  README.md  package.xml
mppi_examples/mppi_first_order_mass/config/: layout.xml  params.yaml
mppi_examples/mppi_first_order_mass/launch/: mass_control.launch  model_tracking.launch
mppi_examples/mppi_first_order_mass/src/: controller_interface.cpp  cost.cpp  dynamics.cpp  model_tracking.cpp
mppi_examples/mppi_manipulation/: CMakeLists.txt  README.md  package.xml  plugins.xml
mppi_examples/mppi_manipulation/config/: config.rviz  debug_urdf.rviz  joint_velocity_tracking.xml  ros_controller.yaml
mppi_examples/mppi_manipulation/data/: door.urdf  door.urdf.xacro  drawer.urdf.xacro  microwave.urdf.xacro  panda.urdf.xacro  panda_grasp.urdf.xacro  panda_mobile.urdf.xacro  panda_mobile_fixed.urdf  panda_mobile_gazebo.urdf.xacro  planar_base.urdf.xacro  rd.urdf  rd_raisim_cylinder.urdf  ridgeback.urdf.xacro  ridgeback.xacro  ridgeback_gazebo.urdf.xacro  shelf.urdf.xacro  valve.urdf  valve.urdf.xacro
mppi_examples/mppi_manipulation/launch/: common.launch  control.launch  debug_sim.launch  load.launch  load_gis.launch  model_tracking.launch  observer.launch  ogre.launch  reference_parsing_test.launch  ros_control.launch  sim.launch  state_assembler.launch
mppi_examples/mppi_manipulation/params/: controller.yaml  dishwasher_cost.yaml  door_cost.yaml  drawer_cost.yaml  microwave_cost.yaml  params.yaml  params_mobile.yaml  shelf_cost.yaml  valve_cost.yaml
mppi_examples/mppi_manipulation/python/: python.cpp
mppi_examples/mppi_manipulation/scripts/: demo.py  evaluation.py  log_processing.py  plots.py  unpause_physics.py
mppi_examples/mppi_manipulation/src/: config_no_ros.cpp  controller_interface.cpp  cost.cpp  dynamics.cpp  (+8 more)
mppi_examples/mppi_manipulation_estimator/: CMakeLists.txt  package.xml
mppi_examples/mppi_manipulation_royalpanda/: CMakeLists.txt  README.md  package.xml  plugins.xml
mppi_examples/mppi_omav_interaction/: CMakeLists.txt  package.xml
mppi_examples/mppi_omav_pathfinder/: CMakeLists.txt  README.md  package.xml
mppi_examples/mppi_omav_raisim/: CMakeLists.txt  package.xml
mppi_examples/mppi_omav_velocity/: CMakeLists.txt  package.xml
mppi_pinocchio/: CMakeLists.txt  package.xml
mppi_pinocchio/src/: model.cpp  ros_conversions.cpp
mppi_ros/: CMakeLists.txt  README.md  package.xml  setup.py
mppi_ros/config/: rqt_multiplot.xml  rqt_multiplot_variance.xml
mppi_ros/launch/: filter_test.launch
mppi_ros/log/: record.csv
mppi_ros/msg/: Array.msg  Config.msg  Data.msg  Rollout.msg  RolloutsInfo.msg
mppi_ros/scripts/: plot_experiment.py  plot_info.py  record_data.py
mppi_ros/src/: controller_interface.cpp  conversions.cpp  ros_params.cpp
mppi_ros/test/: filter_test.cpp
mppi_tools/: CMakeLists.txt  README.md  package.xml
mppi_tools/src/: control_gui.cpp  model_tracking_controller.cpp  visual_debugger.cpp
mppi_tools/unittest/: control_gui_test.cpp  visual_debugger_test.cpp
object_modeling_playground/: CMakeLists.txt  package.xml
object_modeling_playground/launch/: mug_kp_model.launch
object_modeling_playground/params/: mug.yaml
object_modeling_playground/src/: main.cpp  mug.cpp  object.cpp
policy_learning/: .gitignore  CMakeLists.txt  package.xml  readme.md
policy_learning/actions/: collect_rollout.action
policy_learning/scripts/: dagger.py  data_analyzer.py  dataset.py  dataset_collection_panda.py  evaluate.py  experiment_plotting.py  learning.py  models.py  policy_validation.py  record_data.py  roscore_helper.py
policy_learning/src/: hdf5_dataset.cpp  offline_pytorch_expert.cpp  offline_pytorch_learner.cpp  panda_expert.cpp  pole_cart_expert.cpp  torch_script_policy.cpp
(+1000 files in other folders)
