<?xml version="1.0"?>
<package format="2">
  <name>mppi_pinocchio</name>
  <version>0.1.0</version>
  <description>mppi pinocchio</description>
  <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>pinocchio</depend>
</package>
