<?xml version="1.0"?>
<package format="2">
  <name>object_modeling_playground</name>
  <version>0.0.1</version>
  <description>The object_modeling_playground package</description>

  <maintainer email="boysun@ethz.ch">boyang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>interactive_markers</build_depend>

  <exec_depend>interactive_markers</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <depend>manipulation_msgs</depend>
  <depend>keypoint_msgs</depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
