<?xml version="1.0"?>
<package format="2">
    <name>policy_learning</name>
    <version>0.1.0</version>
    <description>Policy learning for informing mppi</description>
    <maintainer email="voigta@ethz.ch">Andreas Voigt</maintainer>
    <author email="voigta@ethz.ch">Andreas Voigt</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>mppi</depend>
    <depend>mppi_pinocchio</depend>
</package>
