<?xml version="1.0"?>
<package format="2">
  <name>manipulation_msgs</name>
  <version>0.0.0</version>
  <description>The manipulation_msgs package</description>

  <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>

  <license>TODO</license>
  <author email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
