<?xml version="1.0"?>
<package format="2">
    <name>mppi_manipulation</name>
    <version>0.1.0</version>
    <description>mppi package</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>roscpp</depend>
    <depend>mppi</depend>
    <depend>mppi_ros</depend>
    <depend>mppi_panda</depend>
    <depend>manipulation_msgs</depend>

    <depend>eigen</depend>
    <depend>roslib</depend>

    <!--  Dependencies required for the ros control framework-->
    <depend>controller_interface</depend>
    <depend>franka_hw</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>
    <depend>franka</depend>
    <depend>franka_example_controllers</depend>
    <depend>ridgeback_description</depend>
    <depend>gazebo_msgs</depend>

    <depend>kdl_parser</depend>

    <export>
        <controller_interface plugin="${prefix}/plugins.xml"/>
    </export>

</package>


