<?xml version="1.0"?>
<package format="2">
    <name>mppi_manipulation</name>
    <version>0.1.0</version>
    <description>mppi package</description>
    <maintainer email="grizzi@mavt.ethz.ch">Giuseppe Rizzi</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>eigen</depend>
    <depend>manipulation_msgs</depend>
    <depend>mppi</depend>
    <depend>mppi_panda</depend>
    <depend>mppi_ros</depend>
    <depend>mppi_pinocchio</depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
</package>


